--- a/Administracion/templates/Administracion/Tercero/index.html
+++ b/Administracion/templates/Administracion/Tercero/index.html
@@ -53,7 +53,7 @@
                                             <tbody>
                                                 {% for tercero in terceros %}
                                                     <tr>
-                                                        {% if tercero.tipo_tercero_id == 1 %}
+                                                        {% if tercero.tipo_tercero_id == 1 or tercero.tipo_tercero_id == 3 %}
                                                             <td>{{ tercero.consecutivo_cliente | stringformat:"03d" }} - {{ tercero.nombre }}</td>
                                                         {% else %}
                                                             <td>{{ tercero.nombre }}</td>
