--- a/Administracion/templates/Administracion/Tercero/Proveedor/actividades_economicas.html
+++ b/Administracion/templates/Administracion/Tercero/Proveedor/actividades_economicas.html
@@ -50,7 +50,7 @@
                                             {% if not persona_juridica %}
                                                 <div class="form-group col-xl-4 col-lg-4 col-md-6 col-sm-6">
                                                     <div class="custom-control custom-checkbox" style="padding-top: 33px; padding-left: 40px">
-                                                        <input type="checkbox" class="custom-control-input" id="check_declara_renta_id" name="declara_renta" {% if proveedor.declara_renta %}checked{% endif %}>
+                                                        <input type="checkbox" class="custom-control-input" id="check_declara_renta_id" name="declara_renta" {% if proveedor_actec.declara_renta %}checked{% endif %}>
                                                         <label class="custom-control-label" for="check_declara_renta_id">Declarante de Renta</label>
                                                     </div>
                                                 </div>
