--- a/Administracion/templates/Administracion/_common/_modal_gestionar_entidad_bancaria.html
+++ b/Administracion/templates/Administracion/_common/_modal_gestionar_entidad_bancaria.html
@@ -22,7 +22,7 @@
                         {% select_tag entidades_bancarias 'entidad_bancaria' 'Seleccione una entidad' texto_label="Entidad Bancaria" required="" value=objeto.entidad_bancaria_id mensaje_validacion='Por favor seleccione una opción' %}
                     </div>
                     <div class="form-group col-12">
-                        {% input_number_tag 'numero_cuenta' 'Número de Cuenta' placeholder='Ingrese el número de cuenta' required='' min='0' max='9223372036854775807' value=objeto.numero_cuenta mensaje_validacion='Por favor ingrese un número' invalido=errores.numero_cuenta %}
+                        {% input_text_tag 'numero_cuenta' 'Número de Cuenta' placeholder='Ingrese el número de cuenta' required='' maxlength="50" pattern="[0-9A-Za-z]*" value=objeto.numero_cuenta mensaje_validacion='Por favor ingrese un número' invalido=errores.numero_cuenta %}
                     </div>
                     <div class="form-group col-12">
                         {% input_file_tag 'certificacion' 'Certificación Bancaria' placeholder="Seleccione un archivo" required="" invalido=errores.logo accept=".pdf" mensaje_validacion='Por favor seleccione un archivo'%}
