EVA-193 chore: Se agrega a la plantilla base que siempre se carguen los iconos dualtone.

--- a/EVA/templates/EVA/_common/base.html
+++ b/EVA/templates/EVA/_common/base.html
@@ -22,6 +22,7 @@
         <link rel="mask-icon" href="{% static 'EVA/Plantilla/img/favicon/safari-pinned-tab.svg' %}" color="#5bbad5">
         <link rel="stylesheet" media="screen, print" href="{% static 'EVA/Plantilla/css/notifications/toastr/toastr.css' %}">
         <link rel="stylesheet" media="screen, print" href="{% static 'EVA/Plantilla/css/notifications/sweetalert2/sweetalert2.bundle.css'%}">
+        <link rel="stylesheet" media="screen, print" href="{% static 'EVA/Plantilla/css/fa-duotone.css' %}">
         {% block styles %}
         {% endblock %}
         <link rel="stylesheet" media="screen, print" href="{% static 'EVA/Plantilla/css/custom/generales.css' %}">
