EVA-195 feat: Se agrega funcionalidad de generar el reporte de listado maestro de SGI.
A esta solo tiene acceso el usuario con el permiso para la gestión completa de SGI.

Por el momento se deja deshabilitada la descarga en formato Excel ya que se daña un poco  el formato.

--- a/SGI/templates/SGI/_common/menu_aplicacion.html
+++ b/SGI/templates/SGI/_common/menu_aplicacion.html
@@ -64,3 +64,11 @@
         </a>
     </li>
 {% endif %}
+{% if perms.TalentoHumano.can_gestioncompletasgi %}
+    <li {% if menu_actual == 'reportes' %} class="active" {% endif %}>
+        <a href="{% url 'SGI:reportes' %}" title="Reportes" data-filter-tags="reportes">
+            <i class="fal fa-file-chart-line"></i>
+            <span class="nav-link-text" data-i18n="nav.sgi_reportes">Reportes</span>
+        </a>
+    </li>
+{% endif %}
