EVA-196 feat: Se cambia la ubicación de enviar soliciud en proveedores.
Ahoira se dejo ubicado en la misma tarejta donde se muestra el progreso para que sa más visible a los usuarios.

--- a/Administracion/templates/Administracion/Tercero/Proveedor/tarjeta_estado_proveedor.html
+++ b/Administracion/templates/Administracion/Tercero/Proveedor/tarjeta_estado_proveedor.html
@@ -63,6 +63,9 @@
                     {% endif %}
                 </div>
             </div>
+            {% if btn_enviar and not perfil_activo and not solicitud_activa and not estado_doc%}
+                <a href="javascript:enviarSolicitudProveedor({{ proveedor_id }})" class="btn btn-primary btn-pills btn-block mt-2">Enviar Solicitud</a>
+            {% endif %}
         </div>
     </div>
 </div>
