--- a/Administracion/templates/Administracion/Tercero/Proveedor/index.html
+++ b/Administracion/templates/Administracion/Tercero/Proveedor/index.html
@@ -142,6 +142,7 @@
     <script src="{% static 'EVA/Plantilla/js/datagrid/datatables/datatables.bundle.js' %}"></script>
     <script src="{% static 'EVA/Plantilla/js/datagrid/datatables/datatables.export.js' %}"></script>
     <script src="{% static 'EVA/Plantilla/js/custom/exportar_tabla.js' %}"></script>
+    <script src="{% static 'Administracion/js/Tercero/exportarTablaProveedores.js' %}"></script>
     <script src="{% static 'Administracion/js/Tercero/proveedorIndex.js' %}"></script>
     <script src="{% static 'EVA/Plantilla/js/formplugins/select2/select2.bundle.js' %}"></script>
     <script src="{% static 'EVA/Plantilla/js/custom/modificacionesSelect2.js' %}"></script>
