feat: Se habilita la descarga el listado maestro de SGI a Excel.

--- a/SGI/templates/SGI/Reportes/index.html
+++ b/SGI/templates/SGI/Reportes/index.html
@@ -38,7 +38,7 @@
                                                     <td>Listado Maestro de Información Documentada</td>
                                                     <td>
                                                         <a class="fad fa-2x fa-file-pdf" style="padding-left: 10px; text-decoration: none !important;" href="{% url 'sgi:reportes-descarga' 1 'pdf'  %}" target="_blank" data-original-title="Ver"  data-template='<div class="tooltip" role="tooltip"><div class="tooltip-inner bg-primary-500"></div></div>' data-toggle="tooltip" title="Descargar pdf"></a>
-{#                                                        <a class="fad fa-2x fa-file-excel" style="padding-left: 10px; text-decoration: none !important;" href="{% url 'sgi:reportes-descarga' 1 'xlsx'  %}" target="_blank" data-original-title="Ver"  data-template='<div class="tooltip" role="tooltip"><div class="tooltip-inner bg-primary-500"></div></div>' data-toggle="tooltip" title="Descargar Excel"></a>#}
+                                                        <a class="fad fa-2x fa-file-excel" style="padding-left: 10px; text-decoration: none !important;" href="{% url 'sgi:reportes-descarga' 1 'xlsx'  %}" target="_blank" data-original-title="Ver"  data-template='<div class="tooltip" role="tooltip"><div class="tooltip-inner bg-primary-500"></div></div>' data-toggle="tooltip" title="Descargar Excel"></a>
                                                     </td>
                                                 <tr>
                                             </tbody>
