Revert "EVA-198 feat: Se agregan los campos de Nivel de Riesgo de ARL y Cesantías"
This reverts commit 7c3ab2e4db95df0b119e13c08595acea8e1eb583.

--- a/TalentoHumano/templates/TalentoHumano/Colaboradores/perfil.html
+++ b/TalentoHumano/templates/TalentoHumano/Colaboradores/perfil.html
@@ -91,8 +91,7 @@
                                                                 <a href="http://{{ colaborador.arl.direccion_web }}" target="_blank" class="btn-link font-weight-bold">ARL: {{ colaborador.arl }}</a> <span class="text-primary d-inline-block mx-3">&#9679;</span>
                                                                 <a href="http://{{ colaborador.eps.direccion_web }}" target="_blank" class="btn-link font-weight-bold">EPS: {{ colaborador.eps }}</a> <span class="text-primary d-inline-block mx-3">&#9679;</span>
                                                                 <a href="http://{{ colaborador.afp.direccion_web }}" target="_blank" class="btn-link font-weight-bold">AFP: {{ colaborador.afp }}</a> <span class="text-primary d-inline-block mx-3">&#9679;</span>
-                                                                <a href="http://{{ colaborador.caja_compensacion.direccion_web }}" target="_blank" class="btn-link font-weight-bold">Caja de compensación: {{ colaborador.caja_compensacion }}</a> <span class="text-primary d-inline-block mx-3">&#9679;</span>
-                                                                <a href="http://{{ colaborador.cesantias.direccion_web }}" target="_blank" class="btn-link font-weight-bold">Cesantias: {{ colaborador.cesantias }}</a> <span class="text-primary d-inline-block mx-3">&#9679;</span>
+                                                                <a href="http://{{ colaborador.caja_compensacion.direccion_web }}" target="_blank" class="btn-link font-weight-bold">Caja de compensación: {{ colaborador.caja_compensacion }}</a>
                                                             </div>
                                                         </div>
                                                     </div>
