feat: Se agreg funcionalidad para cargar chivo pdf del contrato.

--- a/GestionDocumental/templates/GestionDocumental/ConsecutivoContratos/index.html
+++ b/GestionDocumental/templates/GestionDocumental/ConsecutivoContratos/index.html
@@ -103,6 +103,7 @@
             </div>
     </div>
     {% include 'Administracion/_elements/_modal_confirmar_eliminar.html' with objeto='gestion-documental/consecutivo-contratos' %}
+    <div class="modal fade" tabindex="-1" id="cargar" role="dialog"></div>
 
 {% endblock %}
 {% block scripts %}
