EVA  -199 fix:: Se cambia el formulario de crear el consecutivo de contrato para que se muestre en el modal y no en otra página.

--- a/GestionDocumental/templates/GestionDocumental/ConsecutivoContratos/crear.html
+++ b/GestionDocumental/templates/GestionDocumental/ConsecutivoContratos/crear.html
@@ -1,80 +1,57 @@
-{% extends 'GestionDocumental/_common/base_gestion_documental.html' %}
-{% load static %}
 {% load eva_tags %}
-<title>{% block titulo %} Crear Consecutivo de Contrato {% endblock %}</title>
-{% block styles %}
-    <link rel="stylesheet" media="screen, print" href="{% static 'EVA/Plantilla/css/formplugins/bootstrap-datepicker/bootstrap-datepicker.css' %}">
-    <link rel="stylesheet" media="screen, print" href="{% static 'EVA/Plantilla/css/formplugins/select2/select2.bundle.css' %}">
-	<link rel="stylesheet" media="screen, print" href="{%static 'EVA/Plantilla/css/fa-brands.css' %}">
-    <link rel="stylesheet" media="screen, print" href="{% static 'EVA/Plantilla/css/fa-regular.css' %}">
-{% endblock styles%}
-{% block main %}
-    <div class="panel-container show">
-        <div class="header">
-             <h1 class="header-title">
-                <i class='far fa-file-alt'></i> Consecutivos de Contrato: <span class='fw-300'> Crear</span>
-                 <br>
-                 <br>
-             </h1>
-        </div>
-        <div class="row">
-            <div class="col-xl-12">
-                <div id="panel-1" class="panel">
-                    <div class="panel-container show">
-                        <div class="panel-content">
-                            <div class="panel-group">
-                                <div class="panel-body">
-                                    <form action="{% url 'GestionDocumental:consecutivo-contratos-crear' %}" id="consecutivo_contrato_form" method="post" class="needs-validation" novalidate>
-                                        {% csrf_token %}
-                                        <input id="extra_tipos_contrato" value="{{ extra_tipos_contrato }}" style="display: none">
-                                        <div class="form-group">
-                                            <div class="form-row">
-                                                <div class="col-md-6">
-                                                    {% select_tag tipo_contratos 'tipo_contrato' 'Seleccione un tipo de contrato' texto_label="Tipo de contrato" required="" mensaje_validacion='Por favor seleccione un tipo de contrato'  %}
-                                                </div>
-                                                <div class="col-md-6">
-                                                    <div id="colaborador_mostrar_id">
-                                                        {% select_tag colaboradores 'colaborador' 'Seleccione un colaborador' texto_label="Colaborador" required="" mensaje_validacion='Por favor seleccione un colaborador' %}
-                                                    </div>
-                                                    <div id=tercero_mostrar_id style="display: none">
-                                                        {% select_tag terceros 'tercero' 'Seleccione un tercero' texto_label="Tercero" mensaje_validacion='Por favor seleccione un tercero' %}
-                                                    </div>
-                                                </div>
-                                            </div>
-                                        </div>
-                                        <div class="form-group">
-                                            <div class="form-row">
-                                                <div class="col-md-6">
-                                                    {% input_date_tag 'fecha_inicio' 'Fecha de inicio' placeholder="Seleccione una fecha de inicio" required="" autocomplete="off" mensaje_validacion='Por favor seleccione una fecha de inicio.' %}
-                                                </div>
-                                                <div id="fecha_final_mostrar" class="col-md-6">
-                                                    {% input_date_tag 'fecha_final' 'Fecha Final' placeholder="Seleccione una fecha final" required="" autocomplete="off" mensaje_validacion='Por favor seleccione una fecha final.' %}
-                                                </div>
-                                            </div>
-                                        </div>
-                                        <div class="form-row">
-                                            <div>
-                                                <button id="agregar" class="btn btn-primary btn-block"> Agregar</button>
-                                            </div>
-                                            <div style="padding-left: 15px">
-                                                <a href="{% url 'GestionDocumental:consecutivo-contratos-index' 0 %}" class="btn btn-danger btn-block">Cancelar</a>
-                                            </div>
-                                        </div>
-                                    </form>
-                                </div>
+{% load static %}
+<form action="{% url 'GestionDocumental:consecutivo-contratos-crear' %}" id="consecutivo_contrato_form" method="post" class="needs-validation" novalidate>
+    {% csrf_token %}
+    <div class="modal-dialog modal-dialog-centered" role="document">
+        <div class="modal-content">
+            <div class="modal-header p-b-0">
+                <h4 class="modal-title">
+                     Crear consecutivos de Contrato
+                </h4>
+                <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                    <span aria-hidden="true"><i class="fal fa-times"></i></span>
+                </button>
+            </div>
+            <div class="modal-body">
+                <input id="extra_tipos_contrato" value="{{ extra_tipos_contrato }}" style="display: none">
+                <div class="form-group">
+                    <div class="form-row">
+                        <div class="col-md-6">
+                            {% select_tag tipo_contratos 'tipo_contrato' 'Seleccione un tipo de contrato' texto_label="Tipo de contrato" required="" mensaje_validacion='Por favor seleccione un tipo de contrato'  %}
+                        </div>
+
+                            <div id="colaborador_mostrar_id">
+                                {% select_tag colaboradores 'colaborador' 'Seleccione un colaborador' texto_label="Colaborador" required="" mensaje_validacion='Por favor seleccione un colaborador' %}
                             </div>
+                            <div id=tercero_mostrar_id style="display: none">
+                                {% select_tag terceros 'tercero' 'Seleccione un tercero' texto_label="Tercero" mensaje_validacion='Por favor seleccione un tercero' %}
+                            </div>
+
+                    </div>
+                </div>
+                <div class="form-group">
+                    <div class="form-row">
+                        <div class="col-md-6">
+                            {% input_date_tag 'fecha_inicio' 'Fecha de inicio' placeholder="Seleccione una fecha de inicio" required="" autocomplete="off" mensaje_validacion='Por favor seleccione una fecha de inicio.' %}
+                        </div>
+                        <div id="fecha_final_mostrar" class="col-md-6">
+                            {% input_date_tag 'fecha_final' 'Fecha Final' placeholder="Seleccione una fecha final" required="" autocomplete="off" mensaje_validacion='Por favor seleccione una fecha final.' %}
                         </div>
                     </div>
                 </div>
+                <!--<div class="form-row">
+                    <div>
+                        <button id="agregar" class="btn btn-primary btn-block"> Agregar</button>
+                    </div>
+                    <div style="padding-left: 15px">
+                        <a href="{% url 'GestionDocumental:consecutivo-contratos-index' 0 %}" class="btn btn-danger btn-block">Cancelar</a>
+                    </div>
+                </div>-->
+            </div>
+            <div class="modal-footer">
+                <button data-dismiss="modal" class="btn btn-danger btn-pills">Cancelar</button>
+                <button id="agregar" type="submit" class="btn btn-primary btn-pills"> Agregar </button>
             </div>
         </div>
     </div>
-{% endblock main %}
-
-{% block scripts %}
-    <script src="{% static 'EVA/Plantilla/js/formplugins/select2/select2.bundle.js' %}"></script>
-    <script src="{% static 'EVA/Plantilla/js/formplugins/bootstrap-datepicker/bootstrap-datepicker.js' %}"></script>
-    <script src="{% static 'EVA/Plantilla/js/custom/validaciones/validar_formulario.js' %}"></script>
-    <script src="{% static 'TalentoHumano/js/date_picker.js' %}"></script>
-    <script src="{% static 'GestionDocumental/js/consecutivos_contratos.js' %}"></script>
-{% endblock scripts %}
+</form>
