--- a/GestionDocumental/templates/GestionDocumental/ConsecutivoContratos/_modal_cargar_contrato.html
+++ b/GestionDocumental/templates/GestionDocumental/ConsecutivoContratos/_modal_cargar_contrato.html
@@ -7,7 +7,7 @@
         <div class="modal-content">
             <div class="modal-header p-b-0">
                 <h4 class="modal-title">
-                    Cargar archivo al contrato {{ contrato.codigo }} de {{ contrato.empresa }}
+                    Cargar archivo del contrato {{ contrato.codigo }} de {{ contrato.empresa }}
                 </h4>
                 <button type="button" class="close" data-dismiss="modal" aria-label="Close">
                     <span aria-hidden="true"><i class="fal fa-times"></i></span>
