--- a/GestionDocumental/templates/GestionDocumental/ConsecutivoContratos/_modal_crear_consecutivo.html
+++ b/GestionDocumental/templates/GestionDocumental/ConsecutivoContratos/_modal_crear_consecutivo.html
@@ -13,40 +13,34 @@
                 </button>
             </div>
             <div class="modal-body">
-                <input id="extra_tipos_contrato" value="{{ extra_tipos_contrato }}" style="display: none">
                 <div class="form-group">
-                    <div class="form-row">
-                        <div class="col-md-6">
+                    <div class="form-group">
+                        <input id="extra_tipos_contrato" value="{{ extra_tipos_contrato }}" style="display: none">
+                        <div class="col-md-12">
                             {% select_tag tipo_contratos 'tipo_contrato' 'Seleccione un tipo de contrato' texto_label="Tipo de contrato" required="" mensaje_validacion='Por favor seleccione un tipo de contrato'  %}
                         </div>
-
-                            <div id="colaborador_mostrar_id">
-                                {% select_tag colaboradores 'colaborador' 'Seleccione un colaborador' texto_label="Colaborador" required="" mensaje_validacion='Por favor seleccione un colaborador' %}
-                            </div>
-                            <div id=tercero_mostrar_id style="display: none">
-                                {% select_tag terceros 'tercero' 'Seleccione un tercero' texto_label="Tercero" mensaje_validacion='Por favor seleccione un tercero' %}
-                            </div>
-
                     </div>
-                </div>
-                <div class="form-group">
-                    <div class="form-row">
-                        <div class="col-md-6">
+                    <div class="form-group">
+                        <div id="colaborador_mostrar_id" class="col-md-12">
+                            {% select_tag colaboradores 'colaborador' 'Seleccione un colaborador' texto_label="Colaborador" required="" mensaje_validacion='Por favor seleccione un colaborador' %}
+                        </div>
+                    </div>
+                    <div class="form-group" >
+                        <div id=tercero_mostrar_id style="display: none" class="col-md-12">
+                            {% select_tag terceros 'tercero' 'Seleccione un tercero' texto_label="Tercero" mensaje_validacion='Por favor seleccione un tercero' %}
+                        </div>
+                    </div>
+                    <div class="form-group">
+                        <div class="col-md-12">
                             {% input_date_tag 'fecha_inicio' 'Fecha de inicio' placeholder="Seleccione una fecha de inicio" required="" autocomplete="off" mensaje_validacion='Por favor seleccione una fecha de inicio.' %}
                         </div>
-                        <div id="fecha_final_mostrar" class="col-md-6">
+                    </div>
+                    <div class="form-group">
+                        <div id="fecha_final_mostrar" class="col-md-12">
                             {% input_date_tag 'fecha_final' 'Fecha Final' placeholder="Seleccione una fecha final" required="" autocomplete="off" mensaje_validacion='Por favor seleccione una fecha final.' %}
                         </div>
                     </div>
                 </div>
-                <!--<div class="form-row">
-                    <div>
-                        <button id="agregar" class="btn btn-primary btn-block"> Agregar</button>
-                    </div>
-                    <div style="padding-left: 15px">
-                        <a href="{% url 'GestionDocumental:consecutivo-contratos-index' 0 %}" class="btn btn-danger btn-block">Cancelar</a>
-                    </div>
-                </div>-->
             </div>
             <div class="modal-footer">
                 <button data-dismiss="modal" class="btn btn-danger btn-pills">Cancelar</button>
